# HILLEL_CPP.PRO_HW.11

./: .gitignore  CMakeLists.txt  Task.cpp  Task.h  TaskController.cpp  TaskController.h  TaskManager.cpp  TaskManager.h  TaskView.cpp  TaskView.h  main.cpp
